--- a/task/test.html
+++ b/task/test.html
@@ -56,10 +56,10 @@
             {
                 testQuestions: "Для чего можна использовать JavaScript?",
                 testAnswers: [
-                    "Для создания самостоятельной исполняемой программы",
-                    "Для обработки событий на web-странице",
-                    "Для добавления динамики и 'интелекта' в web-страницу",
-                    "Все варианты верны"
+                    "1Для создания самостоятельной исполняемой программы",
+                    "1Для обработки событий на web-странице",
+                    "1Для добавления динамики и 'интелекта' в web-страницу",
+                    "1Все варианты верны"
                 ],
                 correctAnswer: [3]
             },
@@ -76,7 +76,7 @@
         ];
         let currentQuestion = 0;
         let timeCounter = 10;
-
+        Show();
         Timer();
 
         let allCheckboxs = document.querySelectorAll("#questions #blockCheckbox")
@@ -86,7 +86,7 @@
 
             let q = testData[currentQuestion];
             questionNumberJS.textContent = `Вопрос ${currentQuestion + 1} из ${testData.length}`;
-            questionNumberJS.textContent = q.testQuestions;
+            questionJS.textContent = q.testQuestions;
 
             for (let i = 0; i < q.testAnswers.length; i++){
                     let blockForCheckbox = document.createElement("div");
@@ -98,7 +98,7 @@
                     testCheckboxAnswer.value = i;
 
                     let labelCheckbox = document.createElement("label");
-                    labelCheckbox.textContent = testAnswers[j];
+                    labelCheckbox.textContent = q.testAnswers[i];
 
                     blockForCheckbox.append(testCheckboxAnswer, labelCheckbox);
                     questionsJS.append(blockForCheckbox);
@@ -131,9 +131,9 @@
         })
 
         function Timer(){
-            timerJS.textContent = `Осталось ${counter} секунд`;
-            counter--;
-            if (counter < 0){
+            timerJS.textContent = `Осталось ${timeCounter} секунд`;
+            timeCounter--;
+            if (timeCounter < 0){
                 answerJS.click();
                 return;
             }
